Retrotranslator Changelog
=================================

1.0.4 (2006-04-25)
---------------------------------
  - Bug fixed: String.replace(CharSequence, CharSequence) did not work with some characters.
  - Bug fixed: NotSerializableException when serializing annotations.
  - Retrotranslator will not replace "-" by "$" in identifiers any more, e.g. in "package-info.class".

1.0.3 (2006-04-04)
---------------------------------
  - Bug fixed: NullPointerException on invisible (RetentionPolicy.CLASS) annotations
  - Supported: java.util.regex.Pattern.quote(String).

1.0.2 (2006-03-21)
---------------------------------
   - Bug fixed: exception on deserialization of enum inner classes.

1.0.1 (2006-03-13)
---------------------------------
   - Bug fixed: NullPointerException in RetrotranslatorTask
   - Access to methods emptyList(), emptyMap(), emptySet() of java.util.Collections
     is now being replaced with access to fields EMPTY_LIST, EMPTY_MAP, EMPTY_SET.

1.0.0 (2006-03-10)
---------------------------------
   - Ability to process JAR files.
   - Supported: System.nanoTime(), System.clearProperty(String), Boolean.compareTo(Boolean)

0.9.9 (2006-03-01)
---------------------------------
  - Supported: Thread.getId(), UUID, MatchResult, Flushable, Appendable, Readable.
  - Retrotranslator transformer API was improved for better plugin integration.
  - JIT Retrotranslator works on IBM JDK and BEA JRockit JDK.
  - Bug fixed: debug information is kept in translated classes.
  - Bug fixed: invocations of DelayQueue are translated properly.
  - Bug fixed: JIT Retrotranslator supports runtime annotations.

0.9.8 (2006-02-03)
---------------------------------
  - Bug fixed: translated classes didn't work on JRE 1.4.1-b21 where only java.lang.Object may be used
    as qualifying type for array cloning. See http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=4750641
  - Limited support for Thread.getStackTrace(). Non-empty stack trace is returned only for current thread.